--- a/project.json
+++ b/project.json
@@ -23,12 +23,15 @@
     "Microsoft.Extensions.Options.ConfigurationExtensions": "1.1.0",
     "Microsoft.EntityFrameworkCore.Design": {
         "type": "build",
-        "version": "1.0.0-preview2-final"
-    }
+        "version": "1.1.0"
+    },
+    "Microsoft.EntityFrameworkCore.SqlServer": "1.1.0",
+    "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.1.0",
+    "Microsoft.EntityFrameworkCore.Tools.DotNet" : "1.1.0-preview4-final"
   },
 
   "tools": {
-    "Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview2-final",
+    "Microsoft.EntityFrameworkCore.Tools.DotNet": "1.1.0-*",
     "Microsoft.AspNetCore.Razor.Tools": "1.0.0-preview2-final",
     "Microsoft.AspNetCore.Server.IISIntegration.Tools": "1.0.0-preview2-final",
     "Microsoft.DotNet.Watcher.Tools": "1.0.0-preview2-final"
