--- a/project.json
+++ b/project.json
@@ -25,9 +25,9 @@
         "type": "build",
         "version": "1.1.0"
     },
-    "Microsoft.EntityFrameworkCore.SqlServer": "1.1.0",
     "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.1.0",
-    "Microsoft.EntityFrameworkCore.Tools.DotNet" : "1.1.0-preview4-final"
+    "Microsoft.EntityFrameworkCore.Tools.DotNet" : "1.1.0-preview4-final",
+    "Microsoft.EntityFrameworkCore.Sqlite": "1.1.0"
   },
 
   "tools": {
