--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Angular2Spa",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "test": "karma start ClientApp/test/karma.conf.js"
   },
@@ -36,7 +36,7 @@
     "node-noop": "^1.0.0",
     "preboot": "^4.5.2",
     "raw-loader": "^0.5.1",
-    "rxjs": "5.0.0-beta.12",
+    "rxjs": "5.0.0-rc.4",
     "style-loader": "^0.13.1",
     "to-string-loader": "^1.1.5",
     "ts-loader": "^0.8.2",
