connect to SQLite db

--- a/project.json
+++ b/project.json
@@ -47,6 +47,7 @@
   },
 
   "buildOptions": {
+    "debugType": "portable",
     "emitEntryPoint": true,
     "preserveCompilationContext": true,
     "compile": {
