--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
     "test": "karma start ClientApp/test/karma.conf.js"
   },
   "dependencies": {
-    "@angular/common": "2.2.4",
-    "@angular/compiler": "2.2.4",
-    "@angular/core": "2.2.4",
-    "@angular/forms": "2.2.4",
-    "@angular/http": "2.2.4",
-    "@angular/platform-browser": "2.2.4",
-    "@angular/platform-browser-dynamic": "2.2.4",
-    "@angular/platform-server": "2.2.4",
-    "@angular/router": "3.2.4",
+    "@angular/common": "2.0.2",
+    "@angular/compiler": "2.0.2",
+    "@angular/core": "2.0.2",
+    "@angular/forms": "2.0.2",
+    "@angular/http": "2.0.2",
+    "@angular/platform-browser": "2.0.2",
+    "@angular/platform-browser-dynamic": "2.0.2",
+    "@angular/platform-server": "2.0.2",
+    "@angular/router": "3.0.2",
     "@types/node": "^6.0.42",
     "angular2-platform-node": "~2.0.11",
     "angular2-template-loader": "^0.6.0",
@@ -36,7 +36,7 @@
     "node-noop": "^1.0.0",
     "preboot": "^4.5.2",
     "raw-loader": "^0.5.1",
-    "rxjs": "5.0.0-rc.4",
+    "rxjs": "5.0.0-beta.12",
     "style-loader": "^0.13.1",
     "to-string-loader": "^1.1.5",
     "ts-loader": "^0.8.2",
