--- a/project.json
+++ b/project.json
@@ -1,4 +1,5 @@
 {
+  "testRunner": "xunit",
   "dependencies": {
     "Microsoft.NETCore.App": {
       "version": "1.1.0",
@@ -27,7 +28,11 @@
     },
     "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.1.0",
     "Microsoft.EntityFrameworkCore.Tools.DotNet" : "1.1.0-preview4-final",
-    "Microsoft.EntityFrameworkCore.Sqlite": "1.1.0"
+    "Microsoft.EntityFrameworkCore.Sqlite": "1.1.0",
+    "xunit": "2.2.0-beta4-build3444",
+    "dotnet-test-xunit": "2.2.0-preview2-build1029",
+    "Microsoft.DotNet.InternalAbstractions": "1.0.500-preview2-1-003177",
+    "Moq": "4.6.38-alpha"
   },
 
   "tools": {
